# skrew

./: CMakeLists.txt  vcpkg.json
src/: app.cpp  version.h.in
src/skrapp/: context.h  skrapp.cpp  skrapp.h  window.cpp  window.h
src/skrapp/macos/: context_macos.h  context_macos.mm  main_macos.mm  view.h  view.mm  window_delegate.h  window_delegate.mm  window_macos.h  window_macos.mm
